--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,15 +1,31 @@
-Cerberus==0.9.2
-Eve==0.6.4
-eve-neo4j==0.1.4
-Events==0.2.2
-Flask==0.10.1
-Flask-Neo4j==0.5.1
-Flask-PyMongo==0.4.1
-future==0.16.0
+aniso8601==1.2.0
+awsebcli==3.8.3
+blessed==1.9.5
+botocore==1.4.67
+cement==2.8.2
+click==6.6
+colorama==0.3.7
+docker-py==1.7.2
+dockerpty==0.4.1
+docopt==0.6.2
+Flask==0.12
+flask-restplus==0.9.2
+functools32==3.2.3.post2
 itsdangerous==0.24
 Jinja2==2.8.1
+jmespath==0.9.0
+jsonschema==2.5.1
 MarkupSafe==0.23
-py2neo==3.1.2
-pymongo==3.4.0
-simplejson==3.10.0
-Werkzeug==0.11.3
+marshmallow==2.11.1
+neo4j-driver==1.1.0
+pathspec==0.3.4
+python-dateutil==2.5.3
+pytz==2016.10
+PyYAML==3.12
+requests==2.9.1
+semantic-version==2.5.0
+six==1.10.0
+texttable==0.8.6
+wcwidth==0.1.7
+websocket-client==0.37.0
+Werkzeug==0.11.13
