--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -18,10 +18,13 @@ jsonschema==2.5.1
 MarkupSafe==0.23
 marshmallow==2.11.1
 neo4j-driver==1.1.0
+nose==1.3.7
 pathspec==0.3.4
 python-dateutil==2.5.3
+python-termstyle==0.1.10
 pytz==2016.10
 PyYAML==3.12
+rednose==1.2.1
 requests==2.9.1
 semantic-version==2.5.0
 six==1.10.0
