--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,5 +1,7 @@
+alabaster==0.7.9
 aniso8601==1.2.0
 awsebcli==3.8.3
+Babel==2.3.4
 blessed==1.9.5
 botocore==1.4.67
 cement==2.8.2
@@ -8,9 +10,11 @@ colorama==0.3.7
 docker-py==1.7.2
 dockerpty==0.4.1
 docopt==0.6.2
+docutils==0.13.1
 Flask==0.12
 flask-restplus==0.9.2
 functools32==3.2.3.post2
+imagesize==0.7.1
 itsdangerous==0.24
 Jinja2==2.8.1
 jmespath==0.9.0
@@ -20,6 +24,8 @@ marshmallow==2.11.1
 neo4j-driver==1.1.0
 nose==1.3.7
 pathspec==0.3.4
+pockets==0.3.1
+Pygments==2.2.0
 python-dateutil==2.5.3
 python-termstyle==0.1.10
 pytz==2016.10
@@ -28,6 +34,10 @@ rednose==1.2.1
 requests==2.9.1
 semantic-version==2.5.0
 six==1.10.0
+snowballstemmer==1.2.1
+Sphinx==1.5.2
+sphinx-rtd-theme==0.1.9
+sphinxcontrib-napoleon==0.6.0
 texttable==0.8.6
 wcwidth==0.1.7
 websocket-client==0.37.0
